# firehose-grpc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker.yml
graph-node-setup/: README.md  config.toml  docker-compose.yml
src/: archive.rs  cli.rs  cursor.rs  datasource.rs  ds_archive.rs  ds_portal.rs  ds_rpc.rs  fetch.rs  firehose.rs  lib.rs  logger.rs  main.rs  metrics.rs  portal.rs  stream.rs
src/portal/: client.rs  data.rs  mod.rs  query.rs
src/protobuf/: sf.ethereum.r#type.v2.rs  sf.firehose.v2.rs
tests/: tests.rs
