[package]
name = "firehose-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prefix-hex = "0.7.1"
prost = "0.11"
prost-types = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.9"
tonic-reflection = "0.9"

[build-dependencies]
tonic-build = "0.9"
